# bitabyte

./: .gitignore  README.md  bitabyte  bitabyte.py  main.py
common/: __init__.py  bit_utils.py  bit_view_utils.py  color_palette.py
cpp/cpp_byte_mode/: .clang-format  CMakeLists.txt  README.md
cpp/cpp_byte_mode/docs/: ARCHITECTURE.md  ROADMAP.md  STYLE.md
cpp/cpp_byte_mode/src/app/: main.cpp
cpp/cpp_byte_mode/src/core/: byte_format_utils.cpp  byte_format_utils.h
cpp/cpp_byte_mode/src/data/: byte_data_source.cpp  byte_data_source.h
cpp/cpp_byte_mode/src/features/bitstream_sync_discovery/: bitstream_sync_discovery_engine.cpp  bitstream_sync_discovery_engine.h  bitstream_sync_discovery_formatter.cpp  bitstream_sync_discovery_formatter.h  bitstream_sync_discovery_internal.h  bitstream_sync_discovery_ranking.cpp  bitstream_sync_discovery_types.h  bitstream_sync_discovery_worker.cpp  bitstream_sync_discovery_worker.h
cpp/cpp_byte_mode/src/features/classification/: frame_field_classification.cpp  frame_field_classification.h
cpp/cpp_byte_mode/src/features/columns/: byte_column_definition.h  column_color_palette.cpp  column_color_palette.h  visible_byte_column.h
cpp/cpp_byte_mode/src/features/export/: byte_table_csv_exporter.cpp  byte_table_csv_exporter.h
cpp/cpp_byte_mode/src/features/frame_browser/: frame_grouping.cpp  frame_grouping.h
cpp/cpp_byte_mode/src/features/frame_sync/: frame_sync_search.cpp  frame_sync_search.h
cpp/cpp_byte_mode/src/features/framing/: frame_layout.cpp  frame_layout.h
cpp/cpp_byte_mode/src/features/inspector/: field_inspector_analysis.cpp  field_inspector_analysis.h
cpp/cpp_byte_mode/src/models/: byte_table_model.cpp  byte_table_model.h  frame_group_tree_model.cpp  frame_group_tree_model.h
cpp/cpp_byte_mode/src/ui/: bitstream_sync_discovery_dialog.cpp  bitstream_sync_discovery_dialog.h  byte_table_view.cpp  byte_table_view.h  column_definition_dialog.cpp  column_definition_dialog.h  column_definitions_panel.cpp  column_definitions_panel.h  field_current_value_panel.cpp  field_current_value_panel.h  field_inspector_panel.cpp  field_inspector_panel.h  frame_browser_controller.cpp  frame_browser_controller.h  frame_field_hints_panel.cpp  frame_field_hints_panel.h  frame_grouping_panel.cpp  frame_grouping_panel.h  framing_controller.cpp  framing_controller.h  inspection_controller.cpp  inspection_controller.h  live_bit_viewer_widget.cpp  live_bit_viewer_widget.h  main_window.cpp  main_window.h  main_window_columns.cpp  main_window_file_ops.cpp  main_window_internal.h  pattern_search_dialog.cpp  pattern_search_dialog.h
generator/: __init__.py  generator.py
nextgen/: __init__.py  colors.py  columns.py  data.py  delegates.py  frame_sync.py  headers.py  main_window.py  models.py
processing/: __init__.py  cli.py
tests/: test_custom_nibble_split.py  test_entropy_heatmap.py  test_label_band.py  test_mode_transitions.py  test_performance_refactors.py  test_split_colors.py
viewer/: __init__.py  canvas.py  colors.py  column.py  table.py  widgets.py  window.py  window_bitops.py  window_columns.py  window_file_ops.py  window_frames.py  window_layout.py  window_state.py
widgets/: __init__.py
